Don't crash if loan schedule is not available

BUG: 420931
FIXED-IN: 5.0.9